--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="title" content="Shivah12" />
-    <title>RigKatha- Gemini Clone</title>
+    <title>RigKatha</title>
   </head>
   <body>
     <div id="root"></div>
